PIZZA-1 Сделал несколько бесполезных переименований и выгрузил правильное форматирование для идеи

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="Первое окно" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="Ваш выбор" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvEatList" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="Жрать хочу!"
+        android:id="@+id/bEat"
         android:onClick="onClick"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/tvEatList"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 
